# app-dynamics-demo

./: .gitignore  TODOS  TODOS.MD  docker-compose.yml  pom.xml  terraform.tfstate
app-dynamics-agent/: readme.txt.asc
app-dynamics-agent/conf/: controller-info.xml  controller-info.xml.asc
app-dynamics-agent/ver24.10.0.36431/: javaagent.jar.asc  readme.txt.asc
app-dynamics-agent/ver24.10.0.36431/conf/: app-agent-config.xml.asc  open-telemetry.yml.asc
app-dynamics-agent/ver24.10.0.36431/lib/: appagent-boot.cached.packages.txt  appagent-boot.jar.asc  common-utils.jar.asc  singularity-log4j.cached.packages.txt
infrastructure/: COMMANDS.MD  Dockerfile  docker.tf  entrypoint.sh  env-vars.tf  init-networks.tf  init-server-vm.tf  provider-main.tf  provider-vars.tf  terraform.tfvars
infrastructure/.terraform/: terraform.tfstate
infrastructure/.terraform/modules/: modules.json
infrastructure/auth/: auth.json
infrastructure/docker/: Cargo.toml  Dockerfile
infrastructure/docker/abi/: prediction-contract-abi.json  prediction-data-aggregator-abi.json
infrastructure/docker/src/: binance.rs  blockchain.rs  chainlink.rs  constants.rs  lib.rs  logger.rs  mongo.rs  prediction.rs  rabbitmq.rs  structs.rs  ta.rs  utils.rs
infrastructure/state/: terraform.tfstate  terraform.tfstate.backup
order-history-service/: Dockerfile  pom.xml
order-history-service/conf/: controller-info.xml
order-service/: Dockerfile  pom.xml
order-service/app-dynamics-agent/: javaagent.jar.asc
prometheus/: prometheus.yml
tracing-utils/: pom.xml
(+217 files in other folders)
